<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Proteins"
    android:background="@color/orange">


    <ImageView
        android:id="@+id/back"
        android:layout_width="100px"
        android:layout_height="100px"
        app:srcCompat="@drawable/back"
        android:layout_marginTop="100px"
        android:layout_marginLeft="40px"
        android:onClick="onClickGoToMain"/>
    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sau_bowl"
        android:textSize="76px"
        android:textColor="@color/brown"
        android:layout_marginTop="100px"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/proteins_img"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_marginTop="100px"
        app:srcCompat="@drawable/proteins"
        android:layout_below="@+id/back"
        android:layout_alignLeft="@+id/back"/>

    <ImageView
        android:id="@+id/carbohydrates_img"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_alignTop="@+id/proteins_img"
        app:srcCompat="@drawable/carbohydrates"
        android:layout_below="@+id/back"
        android:layout_toRightOf="@id/back"
        android:layout_marginLeft="150px"
        android:onClick="onClickGoToCarbohydrates"/>
    <ImageView
        android:id="@+id/cellulose_img"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_alignTop="@+id/proteins_img"
        app:srcCompat="@drawable/cellulose"
        android:layout_below="@+id/back"
        android:layout_toRightOf="@id/carbohydrates_img"
        android:layout_marginLeft="70px"
        android:onClick="onClickGoToCellulose"/>
    <ImageView
        android:id="@+id/fat_img"
        android:layout_width="200px"
        android:layout_height="150px"
        android:layout_alignTop="@+id/proteins_img"
        app:srcCompat="@drawable/fat"
        android:layout_below="@+id/back"
        android:layout_toRightOf="@id/cellulose_img"
        android:layout_marginLeft="60px"
        android:onClick="onClickGoToFats"/>
    <TextView
        android:id="@+id/proteins_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteins"
        android:textStyle="bold"
        android:layout_below="@id/proteins_img"
        android:layout_marginLeft="55px"
        android:textSize="44px"
        />
    <TextView
        android:id="@+id/carbohydrates_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:layout_below="@id/carbohydrates_img"
        android:layout_marginLeft="240px"
        android:textSize="44px"
        />
    <TextView
        android:id="@+id/cellulose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellulose"
        android:layout_below="@id/cellulose_img"
        android:layout_marginLeft="570px"
        android:textSize="44px"
        />
    <TextView
        android:id="@+id/fat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:layout_below="@id/fat_img"
        android:layout_marginLeft="888px"
        android:textSize="44px"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/proteins_text"
        android:background="@color/green"
        android:layout_marginTop="60px"/>
    <TextView
        android:id="@+id/egg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eggs"
        android:textSize="100px"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30px"/>
    <ImageView
        android:id="@+id/egg_img"
        android:layout_width="300px"
        android:layout_height="300px"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        app:srcCompat="@drawable/eggs"
        android:layout_below="@id/line1"
        android:layout_toRightOf="@id/egg_text"/>

    <ImageView
        android:id="@+id/egg_plus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/plus"
        android:layout_below="@id/egg_text"
        android:layout_marginLeft="40px"
        android:layout_marginTop="60px"/>

    <TextView
        android:id="@+id/egg_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="70px"
        android:layout_alignTop="@+id/egg_plus"
        android:layout_toRightOf="@id/egg_plus"
        android:layout_marginTop="-15px"
        android:layout_marginLeft="25px"/>

    <ImageView
        android:id="@+id/egg_minus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/minus"
        android:layout_marginLeft="200px"
        android:layout_alignTop="@+id/egg_plus" />

    <TextView
        android:id="@+id/egg_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/egg_plus"
        android:layout_marginLeft="100px"
        android:layout_marginTop="-15px"
        android:layout_toRightOf="@id/egg_minus"
        android:text="@string/egg_300_tenge"
        android:textSize="60px" />








    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/egg_plus"
        android:background="@color/green"
        android:layout_marginTop="60px"/>
    <TextView
        android:id="@+id/chicken_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chicken"
        android:textSize="100px"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30px"/>
    <ImageView
        android:id="@+id/chicken_img"
        android:layout_width="300px"
        android:layout_height="300px"
        android:layout_marginLeft="30px"
        android:layout_marginTop="50px"
        app:srcCompat="@drawable/chicken"
        android:layout_below="@id/line2"
        android:layout_toRightOf="@id/chicken_text"/>

    <ImageView
        android:id="@+id/chicken_plus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/plus"
        android:layout_below="@id/chicken_text"
        android:layout_marginLeft="40px"
        android:layout_marginTop="60px"/>

    <TextView
        android:id="@+id/chicken_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="70px"
        android:layout_alignTop="@+id/chicken_plus"
        android:layout_toRightOf="@id/chicken_plus"
        android:layout_marginTop="-15px"
        android:layout_marginLeft="25px"/>

    <ImageView
        android:id="@+id/chicken_minus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/minus"
        android:layout_marginLeft="200px"
        android:layout_alignTop="@+id/chicken_plus" />
    <TextView
        android:id="@+id/chicken_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chicken_1200_tenge"
        android:layout_toRightOf="@id/chicken_minus"
        android:layout_alignTop="@id/chicken_plus"
        android:textSize="60px"
        android:layout_marginTop="-15px"
        android:layout_marginLeft="100px"
        />





    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/chicken_plus"
        android:background="@color/green"
        android:layout_marginTop="60px"/>

    <TextView
        android:id="@+id/cheese_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        android:textSize="100px"
        android:layout_below="@+id/line3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30px"/>
    <ImageView
        android:id="@+id/cheese_img"
        android:layout_width="300px"
        android:layout_height="250px"
        android:layout_marginLeft="30px"
        android:layout_marginTop="50px"
        app:srcCompat="@drawable/cheese"
        android:layout_below="@id/line3"
        android:layout_toRightOf="@id/cheese_text"/>

    <ImageView
        android:id="@+id/cheese_plus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/plus"
        android:layout_below="@id/cheese_text"
        android:layout_marginLeft="40px"
        android:layout_marginTop="60px"/>

    <TextView
        android:id="@+id/cheese_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="70px"
        android:layout_alignTop="@+id/cheese_plus"
        android:layout_toRightOf="@id/cheese_plus"
        android:layout_marginTop="-15px"
        android:layout_marginLeft="25px"/>

    <ImageView
        android:id="@+id/cheese_minus"
        android:layout_width="70px"
        android:layout_height="70px"
        app:srcCompat="@drawable/minus"
        android:layout_marginLeft="200px"
        android:layout_alignTop="@+id/cheese_plus" />
    <TextView
        android:id="@+id/cheese_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese_2000_tenge"
        android:layout_toRightOf="@id/cheese_minus"
        android:layout_alignTop="@id/cheese_plus"
        android:textSize="60px"
        android:layout_marginTop="-15px"
        android:layout_marginLeft="100px"
        />

    <Button
        android:id="@+id/order_btn"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/button_order"
        android:background="@drawable/orange_round_button"
        android:textColor="@color/green"
        android:layout_below="@id/cheese_plus"
        android:layout_marginTop="70px"
        android:layout_centerHorizontal="true"
        android:onClick="onClickGoToOrder"/>


</RelativeLayout>