<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/orange">


    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sau_bowl"
        android:layout_gravity="center"
        android:layout_marginTop="100px"
        android:textSize="76px"
        android:textColor="@color/brown"/>

    <ImageView
        android:id="@+id/body_img"
        android:layout_width="wrap_content"
        android:layout_height="700px"
        android:layout_marginTop="200px"
        app:srcCompat="@drawable/healthy_food"/>


    <TextView
        android:id="@+id/body_text"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="50px"
        android:layout_marginTop="100px"
        android:textColor="@color/green"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/go_btn"
        android:layout_gravity="center"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_round_button"
        android:layout_marginTop="90px"
        android:text="@string/button_choose"
        android:onClick="onClickGoToMenu"
        android:textColor="@color/green"/>
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="3dp"-->
<!--        android:layout_marginTop="160px"-->
<!--        android:background="@color/green"/>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20px">
        <ImageView
            android:id="@+id/basket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/basket"
            android:layout_weight="0.33"
            android:onClick="goToBasket"/>

        <ImageView
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu"
            android:layout_weight="0.33"
            android:onClick="onClickGoToMenu"/>
        <ImageView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/info"
            android:layout_weight="0.33"
            android:onClick="onClickGoToInfo"/>
    </LinearLayout>


</LinearLayout>